--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,8 +1,9 @@
+@import 'react-datepicker/dist/react-datepicker.css';
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: #FEE2E2 ;
+  --foreground: #D61C76 ;
 }
 
 @theme inline {
@@ -12,15 +13,60 @@
   --font-mono: var(--font-geist-mono);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
 
 body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.react-datepicker {
+  font-family: Arial, sans-serif;
+  font-size: 1.4rem;
+  width: 320px !important;
+  border: 1px solid #D61C76;
+  border-radius: 0.75rem;
+  box-shadow: 0 0 10px rgba(0,0,0,0.1);
+  margin-bottom: 15lvh;
+}
+
+.react-datepicker__header {
+  background-color: #D61C76;
+  color: white;
+  border-bottom: none;
+  border-top-left-radius: 0.75rem;
+  border-top-right-radius: 0.75rem;
+}
+
+.react-datepicker__current-month,
+.react-datepicker__day-name,
+.react-datepicker__day {
+  color: #1F2937; /* gray-800 */
+}
+
+.react-datepicker__day--selected {
+  background-color: #D61C76;
+  color: white;
+  border-radius: 0.5rem;
+}
+
+.react-datepicker__day--disabled {
+  color: #d1d5db; /* gray-300 */
+}
+
+.react-datepicker__month-container {
+  width: 100% !important;
+}
+
+.react-datepicker__day,
+.react-datepicker__day-name {
+  width: 2.5rem;
+  line-height: 2.5rem;
+  margin: 0.1rem;
+}
+.react-datepicker-wrapper,
+.react-datepicker__input-container input {
+  width: 100% !important;
+  display: block;
+}
+
